on modular java, open java.io to unnamed module for shutdown hook testing